css/style.css
/* ... */
.instructor p {
    margin: 6px 15px;
    font-size: 10pt;
}
.prod-leads {
    display: flex;
    justify-content: space-between;
}

@media only screen and (max-width: 700px) {
    .section {
        height: auto;
    }
    #home-teams .card {
        margin-bottom: 30px;
    }
    #home-teams .third {
        margin-bottom: 0 !important;
    }
    #apps .section-content {
        margin-left: 2vw !important;
        margin-right: 2vw !important;
    }
    .prod-leads {
        flex-direction: column;
    }
    .prod-leads .instructor {
        margin-bottom: 10px;
    }
}

/* -------------------------------------------------- TEAMS SECTION STYLES END -------------------------------------------------- */

/* -------------------------------------------------- APPS SECTION STYLES START -------------------------------------------------- */

/* .bg-holder#parallax-3 {
    background-image: url('../assets/parallax-img-3.jpg');
    background-size: cover;
} */
.apps-icon {
    border-radius: 5px;
}
.apps-header {
    display: flex;
    justify-content: space-between;
}
#apps {
    padding-top: 5px;
}

/* -------------------------------------------------- APPS SECTION STYLES END -------------------------------------------------- */

@media only screen  
  and (max-width: 1024px) {
    .app {
        margin-bottom: 30px;
    }
  }

/* -------------------------------------------------- APPLY SECTION STYLES START -------------------------------------------------- */

#quick-apply {
    height: 100vh !important;
}
.apply {
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.progress-items {
    display: flex;
    justify-content: space-between;
    margin: 10px 0;
}
.progress {
    background-color: transparent !important;
    border: 1px solid white;
    border-radius: 100px !important;
}
.progress-bar {
    background-color: #ff0099 !important;
}
.apply-header {
    text-align: center;
    margin: 40px 0;
    font-family: 'Comfortaa', cursive;
}
.apply-button {
    margin-bottom: 100px !important;
    height: 50px;
    width: 350px;
    background-color: #ff0099 !important;
    border: none !important;
    border-radius: 100rem !important;
}
.apply-button h4 {
    margin-top: 4px;
}
.button-container {
    width: 100%;
    display: flex;
    justify-content: center;
}
.timeline-item {
    text-align: center;
}
.timeline-item h5 {
    margin: 0;
    padding: 3px;
    font-family: 'Comfortaa', cursive;
    font-weight: bold;
}
.timeline-item p {
    font-style: italic;
    color: rgb(213, 213, 213);
}
.logo {
    width: 100px;
    margin: 0 auto;
}
.apply-button:hover, .apply-button:focus {
    /* box-shadow: 0 8px 12px rgba(0,0,0,0.1), inset 0 10px 30px rgba(255,147,210,0.3), inset 0 2px 2px rgba(255,255,255,0.2); */
    color: white;
    background-color: #ff40c9 !important; 
    cursor: pointer;
}
.modal-content {
    background-color: rgb(20, 20, 20) !important;
    padding: 20px;
}
.modal-head {
    font-family: 'Comfortaa', cursive;
    font-weight: bold;
    display: flex;
    justify-content: space-between;
    margin: 0 20px;
}
.modal-content .row {
    margin: 15px 0px;
}
.modal-content .card {
    background-color: rgb(30, 30, 30) !important;
}
.req {
    margin: 0;
}
.modal-content ul {
    margin: 0;
}
.team-head {
    display: flex;
    justify-content: space-between;
}
.team-head h5 {
    font-weight: bold;
    margin: 0;
}
.team-head-text p {
    margin-top: 3px;
    margin-bottom:8px;
    font-weight: bold;
}
.modal-apply {
    margin-top: 20px;
    width: 100%;
}
/* .apply-icon {
    width: 25px;
    height: 25px;
} */

@media only screen and (max-width: 700px) {
    .timeline-item h5 {
        font-size: 10pt;
    }
    .timeline-item p {
        font-size: 8pt;
    }
    .modal .card {
        margin-bottom: 30px;
    }
    .second {
        margin-bottom: 0px !important;
    }
    .apply-button h4 {
        margin-top: 12px;
    }
}
/* -------------------------------------------------- APPLY SECTION STYLES END -------------------------------------------------- */

/* -------------------------------------------------- CONNECT SECTION STYLES START -------------------------------------------------- */

.social-icon {
    width: 35px;
    height: 35px;
    border-radius: 100px;
    margin: 10px;
    transition: 0.2s ease-in-out;
}
.social-icon:hover {
    transform: scale(1.2);
}
/* #connect .section-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
} */
.social-media {
    display: flex;
    justify-content: center;
}
/* #connect {
    height: 15vh;
}
.connect-header {
    text-align: center;
    font-family: 'Comfortaa', cursive;
}
.social-buttons {
    display: flex;
    justify-content: center;
}
.social-buttons .button {
    margin: 10px 15px;
} */

/* -------------------------------------------------- CONNECT SECTION STYLES END -------------------------------------------------- */

/* -------------------------------------------------- FOOTER STYLES START -------------------------------------------------- */

#footer p {
    margin-top: 18px;
    margin-left: 10px;
}
#footer {
    background-image: url(../assets/unc-skyline.png);
    background-repeat: no-repeat;
    background-size: contain;
    background-position: bottom;
    height: 550px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    opacity: 0.75;
}
.footer-content {
    display: flex;
    justify-content: space-between;
    margin: 0px 15px;
}
@media only screen  
  and (max-width: 1024px) {
    .footer-content {
        flex-direction: column;
    }
    #footer p {
        text-align: center;
        margin: 0;
        font-size: 10pt;
    }
    .social-icon {
        width: 30px;
        height: 30px;
    }
    #footer {
        background-size: contain;
        background-position: bottom;
        height: 250px;
    }
    .footer-content {
        margin-bottom: 100px;
    }
  }
/* ... */

